--- a/IT.html
+++ b/IT.html
@@ -374,9 +374,9 @@
                                     <a href="#"><img class="img-fluid imghight"
                                             src="./it solution/cloude computing.avif" alt=""></a>
                                 </div>
-                                <h3 class="fs-4 mt-3 fw-bold">Edge Cloude Computing</h3>
+                                <h3 class="fs-4 mt-3 fw-bold">Edge Cloud Computing</h3>
 
-                                <p>Harness the power of data with our advanced analytics solutions,
+                                <p>Harness the power of data with our advanced Analytics solutions,
                                     providing valuable insights to inform strategic business decisions.</p>
 
                             </div>
@@ -401,7 +401,7 @@
                 </div>
 
                 <div class="col-lg-5 col-md-6">
-                    <h2 class="fw-bold">DATA ANALYTICE</h2>
+                    <h2 class="fw-bold">DATA ANALYTICS</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./it solution/business-data-analysis.jpg" alt="">
                     </div>
@@ -453,7 +453,7 @@
             <div class="col-md-6 col-lg-4">
                 <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
 
-                <p> <i class="far fa-clock"></i> 9.30 - 18.30 (IST)</p>
+                <p> <i class="far fa-clock"></i> 9:30 - 18:30 (IST)</p>
                 <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
 
                 <div>
