--- a/Nproduct.html
+++ b/Nproduct.html
@@ -65,7 +65,7 @@
 
 
     <section id="itimghideandview" class="container-fluid mt-5 upmallpage">
-        <h2 class=" fw-bold proheadmargin ">I/O Card</h2>
+        <h2 class=" fw-bold proheadmargin ">Digital I/O Card</h2>
         <div class="d-flex justify-content-center secitsolutionimgdiv ">
             <img class="img-fluid " src="./iocard/3 - Copy.png" alt="">
         </div>
@@ -105,7 +105,7 @@
                     diverse needs of your applications. Our Relay Card is a cutting-edge solution designed to enhance
                     control and automation in various applications.Engineered with precision
                     and versatility,this relay card provides seamless integration,optimal
-                    performance, and reliability for your electrical </p>
+                    performance, and reliability for your electrical.</p>
                 <ul class="ulstyletype">
                     <li><i class="fa-solid fa-caret-right"></i><a href="./secondcv.html">12VDC Relay Card</a></li>
                     <li><i class="fa-solid fa-caret-right"></i><a href="./firstcv.html">24VDC Relay Card</a></li>
@@ -136,16 +136,16 @@
             <ul>
                 <li>19 Analog & Digital input and output channels.</li>
                 <li>8 Analog Inputs supports-0-10V,4-20mA,0-2mA,0-5V,0-24V PT100, J, K Type input scale with 12-Bit
-                    resolution</li>
+                    resolution.</li>
                 <li>2 analog outputs supports - PWM, 0-10V.</li>
-                <li>Compatible with most automation software in the market that supports Modbus RTU/TCP</li>
+                <li>Compatible with most automation software in the market that supports Modbus RTU/TCP.</li>
                 <li>Write your own code with the help of a large number of sample code provided.</li>
                 <li>High-speed signal processing.</li>
                 <li>Compatibility with a wide range of voltage levels.</li>
                 <li>Compact form factor for easy integration.</li>
                 <li>Robust construction for industrial environments.</li>
                 <li>User-configurable option for flexible operation.</li>
-                <li>Green LEDs for input status, Red LEDs for Output Status</li>
+                <li>Green LEDs for input status, Red LEDs for Output Status.</li>
             </ul>
             <h3>Application:</h3>
             <ul>
@@ -270,7 +270,7 @@
             <div class="col-md-6 col-lg-4">
                 <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
 
-                <p> <i class="far fa-clock"></i> 9.30 - 18.30 (IST)</p>
+                <p> <i class="far fa-clock"></i> 9:30 - 18:30 (IST)</p>
                 <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
 
                 <div>
