--- a/io.html
+++ b/io.html
@@ -102,7 +102,7 @@
 
     <section id="whatEmbe" class="container-fluid upmallpage">
         <div>
-            <h2 class=" fw-bold">I/O Card</h2>
+            <h2 class=" fw-bold">Digital I/O Card</h2>
             <div class="row ">
                 <div class="col-lg-1"></div>
                 <div class="col-lg-5 col-md-6">
@@ -241,19 +241,18 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>24VDC 1C0 8CH DIGITAL IOCARD</td>
-                        <td>ET-DIO-24V-8CH-1CO</td>
-                        <td>24V</td>
-                        <td>SPDT</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>12VDC 1C0 8CH DIGITAL IOCARD</td>
+                        <td>12VDC 1C0 8CH DIGITAL IO CARD</td>
                         <td>ET-DIO-12V-8CH-1CO</td>
                         <td>12V</td>
                         <td>SPDT</td>
                     </tr>
-
+                    <tr>
+                        <td>2</td>
+                        <td>24VDC 1C0 8CH DIGITAL IO CARD</td>
+                        <td>ET-DIO-24V-8CH-1CO</td>
+                        <td>24V</td>
+                        <td>SPDT</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
@@ -501,7 +500,7 @@
                 <div class="col-md-6 col-lg-4">
                     <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
 
-                    <p> <i class="far fa-clock"></i> 9.30 - 18.30 (IST)</p>
+                    <p> <i class="far fa-clock"></i> 9:30 - 18:30 (IST)</p>
                     <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
 
                     <div>
