--- a/relay.html
+++ b/relay.html
@@ -217,7 +217,7 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>24VDC 1C0 4CH RELAY CARD</td>
+                    <td>24VDC 1 CO 4CH RELAY CARD</td>
                     <td>ET-RLC-24V-4CH-1CO</td>
                     <td>24V</td>
                     <td>4</td>
@@ -225,7 +225,7 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>24VDC 1C0 6CH RELAY CARD</td>
+                    <td>24VDC 1 CO 6CH RELAY CARD</td>
                     <td>ET-RLC-24V-6CH-1CO</td>
                     <td>24V</td>
                     <td>6</td>
@@ -233,7 +233,7 @@
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>24VDC 1C0 8CH RELAY CARD</td>
+                    <td>24VDC 1 CO 8CH RELAY CARD</td>
                     <td>ET-RLC-24V-8CH-1CO</td>
                     <td>24V</td>
                     <td>8</td>
@@ -249,7 +249,7 @@
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td>24VDC 2 C0 4CH RELAY CARD</td>
+                    <td>24VDC 2 CO 4CH RELAY CARD</td>
                     <td>ET-RLC-24V-4CH-2CO</td>
                     <td>24V</td>
                     <td>4</td>
@@ -257,7 +257,7 @@
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td>24VDC 2 C0 6CH RELAY CARD</td>
+                    <td>24VDC 2 CO 6CH RELAY CARD</td>
                     <td>ET-RLC-24V-6CH-2CO</td>
                     <td>24V</td>
                     <td>6</td>
@@ -265,7 +265,7 @@
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td>24VDC 2 C0 8CH RELAY CARD</td>
+                    <td>24VDC 2 CO 8CH RELAY CARD</td>
                     <td>ET-RLC-24V-8CH-2CO</td>
                     <td>24V</td>
                     <td>8</td>
@@ -274,7 +274,7 @@
 
                 <tr>
                     <td>9</td>
-                    <td>12VDC 1C0 2CH RELAY CARD</td>
+                    <td>12VDC 1 CO 2CH RELAY CARD</td>
                     <td>ET-RLC-12V-2CH-1CO</td>
                     <td>12V</td>
                     <td>2</td>
@@ -282,7 +282,7 @@
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td>12VDC 1C0 4CH RELAY CARD</td>
+                    <td>12VDC 1CO 4CH RELAY CARD</td>
                     <td>ET-RLC-12V-4CH-1CO</td>
                     <td>12V</td>
                     <td>4</td>
@@ -290,7 +290,7 @@
                 </tr>
                 <tr>
                     <td>11</td>
-                    <td>12VDC 1C0 6CH RELAY CARD</td>
+                    <td>12VDC 1CO 6CH RELAY CARD</td>
                     <td>ET-RLC-12V-6CH-1CO</td>
                     <td>12V</td>
                     <td>6</td>
@@ -298,7 +298,7 @@
                 </tr>
                 <tr>
                     <td>12</td>
-                    <td>12VDC 1C0 8CH RELAY CARD</td>
+                    <td>12VDC 1CO 8CH RELAY CARD</td>
                     <td>ET-RLC-12V-8CH-1CO</td>
                     <td>12V</td>
                     <td>8</td>
@@ -306,7 +306,7 @@
                 </tr>
                 <tr>
                     <td>13</td>
-                    <td>12VDC 2 C0 2CH RELAY CARD</td>
+                    <td>12VDC 2 CO 2CH RELAY CARD</td>
                     <td>ET-RLC-12V-2CH-2CO</td>
                     <td>12V</td>
                     <td>2</td>
@@ -322,7 +322,7 @@
                 </tr>
                 <tr>
                     <td>15</td>
-                    <td>12VDC 2 C0 6CH RELAY CARD</td>
+                    <td>12VDC 2 CO 6CH RELAY CARD</td>
                     <td>ET-RLC-12V-6CH-2CO</td>
                     <td>12V</td>
                     <td>6</td>
@@ -339,7 +339,7 @@
 
                 <tr>
                     <td>17</td>
-                    <td>230VAC 1C0 2CH RELAY CARD</td>
+                    <td>230VAC 1CO 2CH RELAY CARD</td>
                     <td>ET-RLC-230V-2CH-1CO</td>
                     <td>230V</td>
                     <td>2</td>
@@ -355,7 +355,7 @@
                 </tr>
                 <tr>
                     <td>19</td>
-                    <td>230VAC 1C0 6CH RELAY CARD</td>
+                    <td>230VAC 1CO 6CH RELAY CARD</td>
                     <td>ET-RLC-230V-6CH-1CO</td>
                     <td>230V</td>
                     <td>6</td>
@@ -442,7 +442,7 @@
         <div class="col-md-6 col-lg-4">
             <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
 
-            <p> <i class="far fa-clock"></i> 9.30 - 18.30 (IST)</p>
+            <p> <i class="far fa-clock"></i> 9:30 - 18:30 (IST)</p>
             <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
 
             <div>
