--- a/secondcv.html
+++ b/secondcv.html
@@ -62,7 +62,7 @@
         </div>
     </nav>
 
-    <section id="whatEmbe" class="container-fluid ">
+    <section id="whatEmbe" class="container-fluid upmallpage">
         <h2 class=" fw-bold ">12VDC Relay Card</h2>
         <div class="row ">
             <!-- <div class="col-lg-1"></div> -->
@@ -129,7 +129,7 @@
                     diverse needs of your applications. Our Relay Card is a cutting-edge solution designed to enhance
                     control and automation in various applications.Engineered with precision
                     and versatility,this relay card provides seamless integration,optimal
-                    performance, and reliability for your electrical </p>
+                    performance, and reliability for your electrical.</p>
                 <button type="button" class="btn btn-secondary">Get A Quote</button>
 
             </div>
@@ -139,12 +139,12 @@
 
     </section>
 
-    <section id="relaykeyfesp">
+    <section id="relaykeyfesp" class=" ">
         <div class="container ">
             <h3 class="fw-bold text-primary">KEY FEATURES</h3>
             <ul>
                 <li><span>Multi Voltage Compatibility:</span> Designed for 24V DC applications, offering
-                    versatile compatibility</li>
+                    versatile compatibility.</li>
                 <li><span>Configurable Channels:</span> Available in 2, 4, 6, and 8 channels, allowing precise control
                     over
                     multiple electrical circuits.</li>
@@ -160,13 +160,13 @@
         <div class="container ">
             <h3 class="fw-bold text-primary">SPECIFICATION</h3>
             <ul>
-                <li><span>Relay Type:</span>Omron Omron G2RL-2</li>
+                <li><span>Relay Type:</span> Omron G2RL-2</li>
                 <li><span>Contact Configuration:</span> NO/NC selectable for eachchannel</li>
                 <li><span>Isolation:</span> Optically isolated control inputs</li>
                 <li><span>Color:</span> Green</li>
                 <li><span>LED Indicators:</span> Yes (LED for each channel)</li>
-                <li><span>Operating Temperature:</span> -20°C to 70°C</li>
-                <li><span>Storage temperature:</span> -10°C to 60°C</li>
+                <li><span>Operating Temperature:</span> (-20°C to 70°C)</li>
+                <li><span>Storage temperature:</span> (-10°C to 60°C)</li>
                 <li><span>Humidity Range:</span> 10% to 90% RH (non-condensing)</li>
                 <li><span>Protection:</span> Freewheeling diode across relay coil</li>
 
@@ -334,7 +334,7 @@
             <div class="col-md-6 col-lg-4">
                 <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
 
-                <p> <i class="far fa-clock"></i> 9.30 - 18.30 (IST)</p>
+                <p> <i class="far fa-clock"></i> 9:30 - 18:30 (IST)</p>
                 <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
 
                 <div>
