--- a/thirdcv.html
+++ b/thirdcv.html
@@ -139,9 +139,9 @@
         <div class="container ">
             <h3 class="fw-bold text-primary">KEY FEATURES</h3>
             <ul>
-                <li><span>Multi Voltage Compatibility:</span> Designed for 230V AC applications, offering
+                <li><span>Multi Voltage Compatibility:</span> Designed for 230V AC Relay Card applications, offering
                     versatile compatibility</li>
-                <li><span>Configurable Channels:</span> Available in 2, 4, 6, and8channels, allowing precise control
+                <li><span>Configurable Channels:</span> Available in 2, 4, 6, and 8 channels, allowing precise control
                     over
                     multipleelectrical circuits.</li>
                 <li><span>Relay Contact Configuration:</span> Options include1CO-SPDT and 2CO-DPDT, providing
@@ -156,13 +156,13 @@
         <div class="container ">
             <h3 class="fw-bold text-primary">SPECIFICATION</h3>
             <ul>
-                <li><span>Relay Type:</span>LeoneL2R-1C-230VAC</li>
+                <li><span>Relay Type:</span> LeoneL2R-1C-230VAC</li>
                 <li><span>Contact Configuration:</span> NO/NC selectable for eachchannel</li>
                 <li><span>Isolation:</span> Optically isolated control inputs</li>
                 <li><span>Color:</span> Green</li>
                 <li><span>LED Indicators:</span> Yes (LED for each channel)</li>
-                <li><span>Operating Temperature:</span> -20°C to 70°C</li>
-                <li><span>Storage temperature:</span> -10°C to 60°C</li>
+                <li><span>Operating Temperature:</span> (-20°C to 70°C)</li>
+                <li><span>Storage temperature:</span> (-10°C to 60°C)</li>
                 <li><span>Humidity Range:</span> 10% to 90% RH (non-condensing)</li>
                 <li><span>Protection:</span> Freewheeling diode across relay coil</li>
 
@@ -179,9 +179,6 @@
                 <li>Mains Switching</li>
                 <li>Automatic electrical appliances</li>
                 <li>Electrical isolation in between high & low power sources</li>
-                <li>AC voltage load switching using less voltage DC</li>
-                <li>Delivery of Isolated power</li>
-                <li>Home</li>
             </ul>
         </div>
     </section>
@@ -300,7 +297,7 @@
             <div class="col-md-6 col-lg-4">
                 <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
 
-                <p> <i class="far fa-clock"></i> 9.30 - 18.30 (IST)</p>
+                <p> <i class="far fa-clock"></i> 9:30 - 18:30 (IST)</p>
                 <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
 
                 <div>
