--- a/Electrical.html
+++ b/Electrical.html
@@ -65,9 +65,9 @@
 
     <div id="Panel_de">
         <section id="itimghideandview" class=" ">
-            <div class="container  ">
+            <div class="container">
                 <h2 class=" fw-bold ">Panel design</h2>
-                <p class="">we specialize in electrical control panel design, SLDA, GA, and wiring diagram services. Our
+                <p class="">We specialize in electrical control Panel Design, SLDA, GA, and wiring diagram services. Our
                     expertise ensures precision and reliability in every project. Trust us to tailor solutions to your
                     needs, ensuring efficiency and excellence in electrical design.</p>
                 <button type="button" class="btn btn-secondary mb-1 ">Get A Quote</button>
@@ -149,7 +149,7 @@
             <div class="row ">
                 <div class="col-lg-1 "></div>
                 <div class="col-lg-5  col-md-6">
-                    <h2 class=" fw-bold ">preparation of panel specification &BOM</h2>
+                    <h2 class=" fw-bold ">preparation of panel specification & BOM</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./Diagram/BOM (1).png" alt="">
                     </div>
@@ -213,7 +213,7 @@
                 <div class="col-lg-1 "></div>
 
                 <div id="itdiviot" class="col-lg-5 col-md-6">
-                    <h2 class=" fw-bold ">Cable scheduling engineering:</h2>
+                    <h2 class=" fw-bold ">Cable scheduling engineering</h2>
                     <div class="d-flex justify-content-center secitsolutionimgdiv ">
                         <img class="img-fluid " src="./Diagram/CABLE SCHEDULING2.png" alt="">
                     </div>
@@ -396,7 +396,7 @@
             <div class="col-md-6 col-lg-4">
                 <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
 
-                <p> <i class="far fa-clock"></i> 9.30 - 18.30 (IST)</p>
+                <p> <i class="far fa-clock"></i> 9:30 - 18:30 (IST)</p>
                 <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
 
                 <div>
