--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top ">
         <div class="container-fluid">
 
-            <div>
+            <div class="">
                 <a class="navbar-brand" href="./index.html">
                     <img src="./Hero/logo-removebg-preview.png" width="60px" alt="">
                     <img src="./Hero/ENNOVAlogo.png" width="130px"></a>
@@ -35,7 +35,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+            <div class="collapse navbar-collapse flex-grow-1 " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center fw-bold ">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="./index.html">Home</a>
@@ -56,7 +56,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Contact.html">Contact Us</a>
                     </li>
-                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-secondary  text-light">Call Now</a></li>
+                    <li><a href="tel:+917972911543" class="fw-bold m-1 btn btn-primary text-light">Call Now</a></li>
                 </ul>
             </div>
         </div>
@@ -85,8 +85,8 @@
 
                     <img src="./Hero/ioHERO.jpg" alt="">
                     <div class="carousel-caption">
-                        <h1 class="animated fadeInRight"> I/O CARD</h1>
-                        <h5 class="animated fadeInRight">Optimize control systems with our Embedded IO Card for seamless
+                        <h1 class="animated fadeInRight">Digital I/O Card</h1>
+                        <h5 class="animated fadeInRight">"Optimize control systems with our Embedded IO Card for seamless
                             integration and peak performance."</h5>
                         <a href="./io.html"> <button id="scrolbtn" class="">Learn More</button></a>
                     </div>
@@ -97,8 +97,8 @@
 
                     <img src="./Hero/projects.jpg" alt="">
                     <div class="carousel-caption">
-                        <h1 class="animated fadeInRight">UP coming Projects</h1>
-                        <h5 class="animated fadeInRight">Stay Tuned for Excellence: A Preview of Our Next Milestone.
+                        <h1 class="animated fadeInRight">UP Coming Projects</h1>
+                        <h5 class="animated fadeInRight">"Stay Tuned for Excellence: A Preview of Our Next Milestone."
                         </h5>
                         <a href="./Nproduct.html#upcommingdiv"><button id="scrolbtn" class="">Learn More</button></a>
                     </div>
@@ -143,11 +143,11 @@
 
             <div class="col-lg-5 col-md-6 font aboutpara" data-aos="fade-up" data-aos-duration="2500">
                 <h1>- Get to Know About us -</h1>
-                <h5 class="mt-4">Welcome to ENNOVA TECHNOLOGY your trusted partner in advanced electrical solutions and
-                    IT integration. With a steadfast commitment to excellence, webring forth a diverse range of
-                    cutting-edge products and services designed to empower industries, stream line operations and
-                    enhance
-                    efficiency.</h5>
+                <h5 class="mt-4">At Ennova Technology, we specialize in creating innovative solutions for businesses. From designing
+                    electronics to developing websites, software, and apps, we offer a wide range of services to help
+                    businesses succeed. We also provide cutting-edge IoT solutions for industrial automation, making
+                    processes more efficient and effective. Our goal is to use technology to solve problems and drive
+                    growth for our clients.</h5>
             </div>
             <div class="col-lg-1"></div>
         </div>
@@ -319,7 +319,7 @@
             <div class="col-md-6 col-lg-4">
                 <h3 class="mb-1 fw-bold ">CONTACT INFORMATION</h3>
 
-                <p> <i class="far fa-clock"></i> 9.30 - 18.30 (IST)</p>
+                <p> <i class="far fa-clock"></i> 9:30 - 18:30 (IST)</p>
                 <p><i class="fas fa-phone"></i> +91-7972911543, +91-8830458682</p>
 
                 <div>
